--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ python = ">=3.12"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.4.3"
+sphinx = ">7.3.0"
+sphinx-autoapi = ">=3.1.0"
+sphinx-rtd-theme = ">=0.1.0"
