--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -9,3 +9,9 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     container:
       image: octakitten/tensorplus-v01
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: run build script
+        run: bash build.sh
