--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -8,8 +8,8 @@ jobs:
   build:
     runs-on: [self-hosted, linux, x64]
     container:
-      image: octakitten/tensorplus-v01
-    steps:
+      image: nixos/nix
+      steps:
       - name: checkout repo
         uses: actions/checkout@v4
 
