--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -9,9 +9,7 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     container:
       image: nixos/nix
-      steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
+    steps:
+    - uses: actions/checkout@v4
 
-      - name: run build script
-        run: bash build.sh
+    - run: bash build.sh
