--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -10,4 +10,6 @@ jobs:
     container:
       image: nixos/nix
     steps:
+    - run: wget https://github.com/octakitten/tensorplus/archive/refs/heads/main.zip
+    - run: gzip -d main.zip
     - run: bash build.sh
