--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -11,5 +11,5 @@ jobs:
       image: nixos/nix
     steps:
     - run: wget https://github.com/octakitten/tensorplus/archive/refs/heads/main.zip
-    - run: gzip -d main.zip
+    - run: unzip main.zip
     - run: bash build.sh
