--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     container:
       image: octakitten/tensorplus-v01
+    steps:
+      - uses: 
 
 
 
