--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -11,3 +11,7 @@ jobs:
       image: octakitten/tensorplus-v01
     steps:
       - uses: actions/checkout@v4
+      - run: gh release create --latest --generate-notes /tensorplus/dist/*.whl
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
