--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -12,4 +12,4 @@ jobs:
     container:
       image: octakitten/tensorplus-v01
     steps:
-      - run: gh release create --latest --generate-notes /tensorplus/dist/*.whl
+      - run: gh release create --latest --verify-tag /tensorplus/dist/*.whl
