configuring actions runner

--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -12,4 +12,5 @@ jobs:
     container:
       image: octakitten/tensorplus-v01
     steps:
+      - run: gh release delete latest -y --cleanup-tag
       - run: gh release create --verify-tag latest /tensorplus/dist/*.whl
