--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: make
-      - run: bash build.sh
+      - run: sh build.sh
       - run: /venv/bin/poetry build
       - run: zip tensorplus.zip dist/*.whl dist/*.so dist/*.dylib dist/*.dll
       - run: gh release delete latest -y --cleanup-tag
