change .log to .txt

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -20,8 +20,8 @@ jobs:
       - run: gh release delete nightly -y --cleanup-tag
       - run: gh release create nightly --prerelease --title "Nightly Build" --notes "Automated nightly builds." tensorplus.zip
       - run: /venv/bin/pip3 install dist/tensorplus-0.0.2-py3-none-any.whl
-      - run: /venv/bin/pytest --maxfail=0 --junit-xml=results.xml --cov=tensorplus --cov-report=html --cov-report=term test/ | tee coverage.log
+      - run: /venv/bin/pytest --maxfail=0 --junit-xml=results.xml --cov=tensorplus --cov-report=html --cov-report=term test/ | tee coverage.txt
       - uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: coverage.log
+          pytest-coverage-path: coverage.txt
           junitxml-path: results.xml
