--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: sh build.sh
-      - run: /venv/bin/poetry build
+      - run: uv build --wheel dist
       - run: zip tensorplus.zip dist/*.whl dist/*.so dist/*.dylib dist/*.dll
       - run: gh release delete latest -y --cleanup-tag
       - run: gh release create latest tensorplus.zip
