--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,7 +2,7 @@ name: Tensorplus Wheel Build
 on:
   push:
     branches:
-      - develop
+      - dev
 env: 
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
