--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: sh build.sh
-      - run: uv build --wheel
-      - run: zip tensorplus.zip dist/*.whl dist/*.so dist/*.dylib dist/*.dll
+      - run: zip tensorplus.zip dist/*.whl dist/*.so
       - run: gh release delete nightly -y --cleanup-tag
       - run: gh release create nightly --prerelease --title "Nightly Build" --notes "Automated nightly builds." tensorplus.zip
       - run: /venv/bin/pip3 install dist/tensorplus*.whl
