--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,6 +13,7 @@ jobs:
       image: octakitten/tensorplus-v01
     steps:
       - uses: actions/checkout@v4
+      - run: git config --global --add safe.directory /__w/tensorplus/tensorplus
       - run: sh build.sh
       - run: zip tensorplus.zip dist/*.whl dist/*.so
       - run: gh release delete nightly -y --cleanup-tag
