--- a/.github/workflows/nixbld.yml
+++ b/.github/workflows/nixbld.yml
@@ -13,14 +13,14 @@ jobs:
       image: octakitten/tensorplus-v01
     steps:
       - uses: actions/checkout@v4
+      - run: git config --global --add safe.directory /__w/tensorplus/tensorplus
       - run: sh build.sh
-      - run: uv build --wheel
-      - run: zip tensorplus.zip dist/*.whl dist/*.so dist/*.dylib dist/*.dll
+      - run: zip tensorplus.zip dist/*.whl dist/*.so
       - run: gh release delete latest -y --cleanup-tag
-      - run: gh release create latest tensorplus.zip
-      - run: /venv/bin/pip3 install dist/tensorplus-0.0.2-py3-none-any.whl
-      - run: /venv/bin/pytest --maxfail=0 --junit-xml=results.xml --cov=tensorplus --cov-report=html --cov-report=term test/ | tee coverage.log
+      - run: gh release create latest tensorplus.zip --title "Latest Build" --notes "Latest alpha build."
+      - run: /venv/bin/pip3 install dist/tensorplus-*.whl
+      - run: /venv/bin/pytest --maxfail=0 --junit-xml=results.xml --cov=tensorplus --cov-report=html --cov-report=term test/ | tee coverage.txt
       - uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: coverage.log
+          pytest-coverage-path: coverage.txt
           junitxml-path: results.xml
